switched to messy trajectory plot from sep index

--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -516,11 +516,7 @@ To obtain a measure of the magnitude of effect of including F3, separate linear 
 The same separability index was also used to assess what cue space provided the largest separability between the two vowels in each long-short vowel pairs. For this evaluation of what spectral cues could best distinguish between categories in each quantity contrast, the category separability index was calculated for each pair and four different cue combinations: F1-F2, F1-F3, F2-F3 or F1-F2-F3. Separate LMMs were fit for each long-short vowel pair, using the same c
 
 #### Dynamic acoustic analysis
-Formant measurements at all five time-points were used in the dynamic analysis to assess the importance of formant dynamics for vowel distinctions. The dynamic analysis is divided into two main sections. In the first section, formant trajectory plots were used to assess the scope and direction of formant movements, and to what extent vowels seem to diphthongize or merely display movements. The trajectory plots were also used to evaluate the hypothesized importance of formant trajectories for the [`r linguisticsdown::cond_cmpl("iː")`]-[`r linguisticsdown::cond_cmpl("yː")`]-[`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("oː")`]-[`r linguisticsdown::cond_cmpl("uː")`] and [`r linguisticsdown::cond_cmpl("ɛː")`]-[`r linguisticsdown::cond_cmpl("æː")`] contrasts, as reported in previous work [e.g., @kuronen2000; @pelzer-boersma2019], and to explore trajectories in the short vowels. This part of the analysis was supplemented with the category separability index for neighboring categories, to assess whether indices that could account for information at each time-point increased separability relative to a static index. The F1-F2 category separability index obtained in the static analysis was compared against an 'omnibus'  separability index that could account for category separability at each of the five time-points.^[a footnote here on where to average??]<!--add here--> The equation \@ref(eq:category-separability) was modified to \@ref(eq:category-separability-traj):
-
-\begin{equation}
- separability \ of /`r linguisticsdown::cond_cmpl("yː")`/ from /`r linguisticsdown::cond_cmpl("iː")`/ = \frac{\sum\limits_{k=1}^{n} \sqrt{(\mu(F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t1},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t2},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t3},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t4},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t5}) - \mu(F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t1},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t2},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t3},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t4},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t5}))^2 + (\mu(F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t1},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t2},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t3},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t4},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t5}) - \mu(F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t1},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t2},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t3},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t4},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t5}))^2}}{n} (\#eq:category-separability-traj)
-\end{equation}
+Formant measurements at all five time-points were used in the dynamic analysis to assess the importance of formant dynamics for vowel distinctions. The dynamic analysis is divided into two main sections. In the first section, formant trajectory plots were used to assess the scope and direction of formant movements, and to what extent vowels seem to diphthongize or merely display movements. The trajectory plots were also used to evaluate the hypothesized importance of formant trajectories for the [`r linguisticsdown::cond_cmpl("iː")`]-[`r linguisticsdown::cond_cmpl("yː")`]-[`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("oː")`]-[`r linguisticsdown::cond_cmpl("uː")`] and [`r linguisticsdown::cond_cmpl("ɛː")`]-[`r linguisticsdown::cond_cmpl("æː")`] contrasts, as reported in previous work [e.g., @kuronen2000; @pelzer-boersma2019], and to explore trajectories in the short vowels.
 
 In the second part of the dynamic analysis, the hypothesized contribution of formant dynamics to category information was modeled using generalized additive mixed-effects models (GAMMs) [@baayen2017]. GAMMs were employed to assess the relative contribution of each cue to category distinctions once formant dynamics was considered, while also accounting for by-talker variability. This type of model has not only a temporal structure (formant measurements at different time-points), but also a hierarchical structure, as individual measurements were grouped into formant contours that in turn were grouped by talkers and gender. Both the complex dependencies generated by this structure as well as the non-monotonic behavior of formants, cannot easily be captured by traditional parametric methods, such as linear regression. GAMMs can accommodate these nonlinear relationships between predictors and response variables [e.g., @soskuthy2021]. Much like other types of mixed models, they allow for the inclusion of random effects, which provides a parsimonious way to account for dependencies in grouped data. 
 
@@ -1246,246 +1242,7 @@ Some of the movement could be due to coarticulatory effects from the alveolars i
 
 Figure \@ref(fig:trajectories) further demonstrates that some neighbouring categories either start at different locations but end up in the same, or start at similar locations but travel in different directions. For instance, [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`] are fairly closely located at earlier time-points, but differ substantially towards the end of the vowel segment, while [`r linguisticsdown::cond_cmpl("ɛː")`]-[`r linguisticsdown::cond_cmpl("æː")`], [`r linguisticsdown::cond_cmpl("øː")`]-[`r linguisticsdown::cond_cmpl("œː")`] and [`r linguisticsdown::cond_cmpl("ø")`]-[`r linguisticsdown::cond_cmpl("œ")`] start at different locations but end up in approximately the same [c.f., @kuronen2000].<!--add: the overlap found at earlier tps in i-y-e in kuronen, does not seem to replicate here--> Finally, the formant trajectories suggest that the empty spots identified in the vowel space under a static analysis (Figure \@ref(fig:swe-vowels)), may indeed be occupied when vowel dynamics is considered. This is especially true for [`r linguisticsdown::cond_cmpl("eː")`] that travels from the mid-high front to the mid center of the space as the signal unfolds---down to a position closer to its short counterpart, [`r linguisticsdown::cond_cmpl("ɛ")`]. Given the amount of overlap when static spectral cues are considered (Figure \@ref(fig:swe-vowels)), formant dynamics is likely highly informative for several of these distinctions.
 
-While formant trajectories are useful for illustrating general trends in formant movements over time-points across talkers, they cannot account for individual variation in these movements. The use of a statistical model is a principled way of assessing how category information can predict different acoustic cues, while accounting for individual variation in the data... 
-
-<!--To quantitatively estimate whether category distinctions increase once dynamic information is considered, category separability indices were calculated on the dynamic formant data. Comparing these indices against those of static measures would allow for an assessment of whether category separability in F1-F2 space increases once dynamic information is considered. This index was calculated for the neighboring [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`], [`r linguisticsdown::cond_cmpl("ɛː")`]-[`r linguisticsdown::cond_cmpl("æː")`], [`r linguisticsdown::cond_cmpl("øː")`]-[`r linguisticsdown::cond_cmpl("œː")`] and [`r linguisticsdown::cond_cmpl("ø")`]-[`r linguisticsdown::cond_cmpl("œ")`]. Comparisons of [`r linguisticsdown::cond_cmpl("iː")`]-[`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("iː")`]-[`r linguisticsdown::cond_cmpl("eː")`] and [`r linguisticsdown::cond_cmpl("yː")`]-[`r linguisticsdown::cond_cmpl("ʉː")`] were also included as formant trajectories have been hypothesized to cue these category distinctions [@kuronen2000].-->
-
-```{r}
-get_category_separability.dynamic <- function(
-    data,
-    data_means,
-    category_A, 
-    category_B) {
-  data %>%
-    filter(Normalization.Type == "Nearey's uniform scaling (log)", category == category_A) %>%
-    left_join(data_means %>% 
-                filter(category == category_B),
-              by = c("Talker", "timepoint")) %>%
-     rename(category = category.x, mean_category = category.y) %>%
-    # Get category separability for each cue and each token at each time-point
-    group_by(Talker, Token, timepoint) %>%
-    mutate(
-      category_separabilityF1F2 = sum(sqrt((F1 - F1_mean)^2 + (F2 - F2_mean)^2)) / n(),
-      category_separabilityF1F3 = sum(sqrt((F1 - F1_mean)^2 + (F3 - F3_mean)^2)) / n(),
-      category_separabilityF2F3 = sum(sqrt((F2 - F2_mean)^2 + (F3 - F3_mean)^2)) / n(),
-      category_separabilityF1F2F3 = sum(sqrt((F1 - F1_mean)^2 + (F2 - F2_mean)^2) + (F3 - F3_mean)^2) / n()) %>%
-    # get the category separability for each cue and each token across time-points
-    group_by(Talker, Token) %>%
-    mutate(
-      separabilityF1F2 = mean(category_separabilityF1F2, na.rm = T),
-      separabilityF1F3 = mean(category_separabilityF1F3, na.rm = T),
-      separabilityF2F3 = mean(category_separabilityF2F3, na.rm = T),
-      separabilityF1F2F3 = mean(category_separabilityF1F2F3, na.rm = T))
-    # mutate(
-    #   category_separability_F1 = ifelse(
-    #     category == category_A, 
-    #     map2(F1, data$F1_centroid[data$category == category_B],
-    #          function(x, y) (x - y)^2), NA),
-    #   category_separability_F2 = ifelse(
-    #     category == category_A, 
-    #     map2(F2, data$F2_centroid[data$category == category_B],
-    #          function(x, y) (x - y)^2), NA)) %>%
-    # filter(!map_lgl(category_separability_F1, is.null), !map_lgl(category_separability_F2, is.null)) %>% 
-    # group_by(Talker, category) %>%
-    # mutate(
-    #   # sum the separability across all timepoints
-    #   separability_F1F2 = sum(sqrt(map_dbl(category_separability_F1, mean, na.rm = T) + map_dbl(category_separability_F2, mean, na.rm = T)), na.rm = T) / n)
-}
-
-d.SwehVd.centroids.dynamic <- d.SwehVd.forStudy.long %>% 
-      filter(Normalization.Type == "Nearey's uniform scaling (log)") %>%
-      group_by(Talker, category, timepoint) %>%
-      summarise(across(starts_with("F"), ~ mean(.x), .names = '{col}_mean'))
-
-# d.SwehVd.for.cat.separability.dynamic <- d.SwehVd.forStudy.long %>% 
-#   filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[yː]", "[ʉː]", "[eː]", "[ɛː]", "[æː]", "[øː]", "[œː]", "[ø]", "[œ]", "[oː]", "[uː]")) %>%
-#   left_join(
-#     d.SwehVd.forStudy.long %>% 
-#       filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[yː]", "[ʉː]", "[eː]", "[ɛː]", "[æː]", "[øː]", "[œː]", "[ø]", "[œ]", "[oː]", "[uː]")) %>%
-#       group_by(Talker, category, timepoint) %>%
-#       summarise(across(starts_with("F"), ~ mean(.x))) %>%
-#       select(Talker, category, F1, F2, F3, timepoint),
-#     by = c("Talker", "category", "timepoint")) %>%
-#   mutate(
-#     F1 = F1.x,
-#     F2 = F2.x,
-#     F3 = F3.x,
-#     F1_centroid = F1.y,
-#     F2_centroid = F2.y,
-#     F3_centroid = F3.y) %>%
-#   select(-ends_with(c(".x", ".y"))) %>%
-#   group_by(Talker, category, Token) %>%
-#   summarise(
-#     F1 = list(F1),
-#     F2 = list(F2),
-#     F1_centroid = list(F1_centroid),
-#     F2_centroid = list(F2_centroid))
-
-d.SwehVd.cat.separability.dynamic <- rbind(
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[iː]", category_B = "[yː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "iː - yː"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[yː]", category_B = "[iː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "iː - yː"),
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[iː]", category_B = "[eː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "iː - eː"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[eː]", category_B = "[iː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "iː - eː"),
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[yː]", category_B = "[ʉː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "yː - ʉː"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[ʉː]", category_B = "[yː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "yː - ʉː"),
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[ɛː]", category_B = "[æː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "ɛː - æː"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[æː]", category_B = "[ɛː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "ɛː - æː"),
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[øː]", category_B = "[œː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "øː - œː"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[œː]", category_B = "[øː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "øː - œː"),
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[ø]", category_B = "[œ]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "ø - œ"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[œ]", category_B = "[ø]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "ø - œ"),
-  d.SwehVd.forStudy.long %>%
-    get_category_separability.dynamic(category_A = "[oː]", category_B = "[uː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "oː - uː"),
-  d.SwehVd.forStudy.long %>%
-  get_category_separability.dynamic(category_A = "[uː]", category_B = "[oː]", data_means = d.SwehVd.centroids.dynamic) %>%
-    mutate(comparison = "oː - uː")) %>%
-  group_by(Talker, category, comparison) %>%
-  summarise(
-    F1F2 = mean(separabilityF1F2, na.rm = T)) %>%
-  pivot_longer(
-    cols = starts_with("F"),
-    names_to = "cue_dimension",
-    values_to = "separability") %>%
-  group_by(Talker, comparison, cue_dimension) %>%
-  mutate(cue_dimension = factor(cue_dimension),
-         category = factor(category, levels = levels.vowel.IPA.swe),
-         Talker = factor(Talker),
-         pairwise_separability = mean(separability))
-         
-         # 
-         # ,
-         # comparison = factor(comparison, levels = c("iː to yː", "yː to iː", "eː to iː", "iː to eː", "yː to ʉː", "ʉː to yː", "ɛː to æː", "æː to ɛː", "øː to œː", "œː to øː", "ø to œ", "œ to ø", "oː to uː", "uː to oː")))
-
-d.SwehVd.cat.separability.compare <-
-  d.SwehVd.cat.separability %>%
-  filter(
-    cue_dimension == "F1F2", comparison %in% c("iː - yː", "iː - eː", "yː - ʉː", "ɛː - æː", "øː - œː", "ø - œ", "oː - uː")) %>%
-  mutate(
-    analysis = "static") %>%
-  rbind(d.SwehVd.cat.separability.dynamic %>%
-          mutate(
-            analysis = "dynamic"))
-```
-(ref:cat-sep-dynamic) The effect of calculating the category separability along F1 and F2 using static and dynamic measure for the distinction between neighboring high categories (**left panel**), and lower-mid (**right panel**). Pointranges indicate mean and 95% bootstrapped CIs of the category separability summarized across talkers under the assumption of static and dynamic cues. Shape indicates neighboring categories for which the comparison is made, color indicates the direction of the comparison.
-
-```{r cat-sep-dynamic, fig.width=base.width*3.5, fig.height=base.height*2, out.width='90%', fig.align='center', fig.cap="(ref:cat-sep-dynamic)", message=FALSE}
-colors.comparison <- c("#66C2A5", "#FB9A99", "#FC8D62", "#E7298A", "#FFD92F", "#E6AB02", "#A6CEE3")
-names(colors.comparison) <- c("iː - yː", "iː - eː", "yː - ʉː", "ɛː - æː", "øː - œː", "ø - œ", "oː - uː")
-
-# p.category.separability %+%
-#   (d.SwehVd.cat.separability.compare %>%
-#      group_by(analysis, comparison) %>%
-#      mutate(
-#        analysis = factor(analysis, levels = c("static", "dynamic")),
-#        comparison = factor(comparison, levels = c("iː - yː", "iː - eː", "yː - ʉː", "oː - uː", "ɛː - æː", "øː - œː", "ø - œ")),
-#        height = ifelse(comparison %in% c("iː - yː", "iː - eː", "yː - ʉː", "oː - uː"), "high vowel overlap", "lower-mid vowel overlap"),
-#        # group = case_when(comparison %in% c("iː to yː",  "yː to iː") ~ "iː - yː",
-#        #                   comparison %in% c("eː to iː", "iː to eː") ~ "eː - iː",
-#        #                   comparison %in% c("yː to ʉː", "ʉː to yː") ~ "yː - ʉː",
-#        #                   comparison %in% c("ɛː to æː", "æː to ɛː") ~ "ɛː to æː",
-#        #                   comparison %in% c("øː to œː", "œː to øː") ~ "øː to œː",
-#        #                   comparison %in% c("ø to œ", "œ to ø") ~ "ø to œ",
-#        #                   comparison %in% c("oː to uː", "uː to oː") ~ "oː - uː"),
-#        ci = list(enframe(Hmisc::smean.cl.boot(separability)))) %>%
-#      unnest(ci) %>%
-#      spread(name, value) %>%
-#      group_by(analysis, comparison, height) %>%
-#      summarise(
-#        mean_CI_lower = mean(Lower),
-#        mean_CI_upper = mean(Upper),
-#        mean = mean(Mean))) +
-#   aes(x = analysis) +
-#   geom_line(aes(group = comparison), position = position_dodge(width = 0.3), linetype = "dashed") +
-#   scale_color_manual(name = "comparison", values = colors.comparison) +
-#   facet_grid(~ height) +
-#  guides(shape = "none", color = guide_legend(nrow = 8))
-```
-
-<!--Figure \@ref(fig:cat-sep-dynamic) suggests that for several vowel distinctions, including formant trajecory information does not improve category separability to any substantial extent. The distinctions that benefit most from formant movements seem to be the [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`] and the [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("œː")`], for all categories. Interestingly, for the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`] distinction, only the separability in [`r linguisticsdown::cond_cmpl("ʉː")`] seems to improve when accounting for formant movements. The results would overall seem to suggest that...-->
-
-<!--Do some vowels benefit from formant movements disproportionally much? Treat each time-point as an independent Gaussian distribution, calculate at each time-point separate indices over the cues and then sum them up for the 5 tps. Separate linear mixed-effects models (LMMs) were fit to analyse the by-talker by-category separability for each of the pairs, with category, analysis type (static or dynamic) and their interaction as fixed-effect predictors, and Talker as random effect. Analysis was sum-coded (static = 1, dynamic = -1). All but three LMMs indicated a main effect of cue dimension, with category separability increasing when taking formant movements into account (all $ps < .028$). The three models that did not reach significance predicted the separability of [`r linguisticsdown::cond_cmpl("iː")`] from [`r linguisticsdown::cond_cmpl("yː")`] ($\bar\beta = -9.4e-05, SE = 1.58e-04, p > .55$), [`r linguisticsdown::cond_cmpl("eː")`] from [`r linguisticsdown::cond_cmpl("iː")`] ($\bar\beta = -7.99e-05, SE = 3.1e-04, p > .798$), and [`r linguisticsdown::cond_cmpl("yː")`] from [`r linguisticsdown::cond_cmpl("ʉː")`] ($\bar\beta = -.0003, SE = .0001, p > .08$).-->
-
-```{r}
-# d.SwehVd.cat.separability.compare %<>%
-#   mutate(
-#     analysis = factor(analysis, levels = c("static", "dynamic")))
-# contrasts(d.SwehVd.cat.separability.compare$analysis) <- contr.sum(2)
-# 
-# # Rename contrast labels
-# d.SwehVd.cat.separability.compare$analysis <- factor(d.SwehVd.cat.separability.compare$analysis, labels = c("static", "dynamic"))
-# 
-# m.sep.IIYY.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "iː to yː"))
-# 
-# m.sep.YYII.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "yː to iː"))
-# 
-# m.sep.EEII.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "eː to iː"))
-# 
-# m.sep.IIEE.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "iː to eː"))
-# 
-# m.sep.YYUU.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "yː to ʉː"))
-# 
-# m.sep.UUYY.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "ʉː to yː"))
-# 
-# m.sep.ÄÄÄRÄR.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "ɛː to æː"))
-# 
-# m.sep.ÄRÄRÄÄ.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "æː to ɛː"))
-# 
-# m.sep.ÖÖÖRÖR.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "øː to œː"))
-# 
-# m.sep.ÖRÖRÖÖ.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "œː to øː"))
-# 
-# m.sep.ÖÖRR.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "ø to œ"))
-# 
-# m.sep.ÖRRÖ.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "œ to ø"))
-# 
-# m.sep.ÅÅOO.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "oː to uː"))
-# 
-# m.sep.OOÅÅ.comp <- lmerTest::lmer(separability ~ analysis + (1|Talker),
-#                       data = d.SwehVd.cat.separability.compare %>% filter(comparison == "uː to oː"))
-
-```
-```{r}
-# 
-rm(d.SwehVd.cat.separability.compare, m.sep.ÄÄÄRÄR.comp, m.sep.ÅÅOO.comp, m.sep.ÄRÄRÄÄ.comp, m.sep.EEII.comp, m.sep.IIEE.comp, m.sep.IIYY.comp, m.sep.OOÅÅ.comp, m.sep.ÖÖÖRÖR.comp, m.sep.ÖÖRR.comp, m.sep.ÖRÖRÖÖ.comp, m.sep.ÖRRÖ.comp, m.sep.UUYY.comp, m.sep.YYII.comp, m.sep.YYUU.comp)
-```
+While formant trajectories are useful for illustrating general trends in formant movements over time-points across talkers, they cannot account for individual variation in these movements. The use of a statistical model is a principled way of assessing how category information can predict different acoustic cues, while accounting for individual variation in the data... <!--add here-->
 
 ```{r}
 # d.SwehVd.forStudy.long.dynamic %>%
