update to bib-file; updated ps after rerunning models on outlier-removed data

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -81,10 +81,39 @@
   address = {{Uppsala}}
 }
 
+@book{boersma1998,
+  title={Functional phonology: Formalizing the interactions between articulatory and perceptual drives},
+  author={Boersma, Paul},
+  year={1998},
+  address={Amsterdam},
+  publisher={Den HaagHolland Academic Graphics/IFOTT}
+}
+
 @misc{boersma-weenink2022,
   title = {Praat: {{Doing}} Phonetics by Computer [{{Computer}} Program]},
   author = {Boersma, Paul and Weenink, David},
   year = {2022}
+}
+
+@article{bradlow1995,
+  title={A comparative acoustic study of English and Spanish vowels},
+  author={Bradlow, Ann R},
+  journal={The Journal of the Acoustical Society of America},
+  volume={97},
+  number={3},
+  pages={1916--1924},
+  year={1995},
+  publisher={Acoustical Society of America}
+}
+
+@article{brand2021,
+  title={Systematic co-variation of monophthongs across speakers of New Zealand English},
+  author={Brand, James and Hay, Jen and Clark, Lynn and Watson, Kevin and S{\'o}skuthy, M{\'a}rton},
+  journal={Journal of Phonetics},
+  volume={88},
+  pages={101096},
+  year={2021},
+  publisher={Elsevier}
 }
 
 @incollection{bruce2009,
@@ -319,6 +348,15 @@
   file = {/Users/anpe7128/Zotero/storage/7N35ZR6K/Fujimura - 1967 - On the Second Spectral Peak of Front Vowels a Per.pdf}
 }
 
+@article{gordon2013,
+  title={Investigating chain shifts and mergers},
+  author={Gordon, Matthew J},
+  journal={The handbook of language variation and change},
+  pages={203--219},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
 @article{gross2020,
   title = {Weak {{Lips}}? {{A Possible Merger}} of /i:/ And /y:/ In {{Gothenburg}}},
   shorttitle = {Weak {{Lips}}?},
@@ -379,7 +417,6 @@
   The traditional division of the Swedish long rounded vowels into two groups, one containing [y:] and [ø:] and the other containing [ω:] and [u:] was confirmed, on the basis of electromyographic measurements of the output of several locations in the facial muscles. The vowel [o:] does not group with [ø:], as has been suggested, and [α:], although rounded, has a pattern dissimilar to all other vowels. The short vowels show patterns similar to their long counterparts with reduced activity and duration.}
 }
 
-
 @article{hammarstrom-norman1957,
   title = {Om den frikativa slutfasen vid de svenska l{\aa}nga vokalerna i, y, u, w.{[On the final fricative phase in the Swedish long vowels i, y, u, w.]}},
   author = {G Hammarstr{\"o}m and L. Norman},
@@ -389,6 +426,16 @@
   address={K{\o}benhavn},
   year={1957},
   ISSN={0029-1552},
+}
+
+@article{hay2015,
+  title={Tracking word frequency effects through 130 years of sound change},
+  author={Hay, Jennifer B and Pierrehumbert, Janet B and Walker, Abby J and LaShell, Patrick},
+  journal={Cognition},
+  volume={139},
+  pages={83--91},
+  year={2015},
+  publisher={Elsevier}
 }
 
 @article{henton2005,
@@ -522,16 +569,6 @@
   file = {/Users/anpe7128/Zotero/storage/2DP9QVK6/Joos - 1948 - Acoustic Phonetics.pdf}
 }
 
-@article{king1969,
-  title={Push chains and drag chains},
-  author={King, Robert D},
-  journal={Glossa},
-  volume={3},
-  number={1},
-  pages={3--21},
-  year={1969}
-}
-
 @book{kotsinas1995,
   title = {Dialekt {[Dialect]}},
   author = {Kotsinas, Ulla-Britt},
@@ -607,6 +644,15 @@
   file = {/Users/anpe7128/Zotero/storage/PNYSIHXY/Leinonen - An Acoustic Analysis of Vowel Pronunciation in Swe.pdf}
 }
 
+@article{liljencrants-lindblom1972,
+  title={Numerical simulation of vowel quality systems: The role of perceptual contrast},
+  author={Liljencrants, Johan and Lindblom, Bj{\"o}rn},
+  journal={Language},
+  pages={839--862},
+  year={1972},
+  publisher={JSTOR}
+}
+
 @book{lindblom1963,
   title = {On vowel reduction},
   author = {Lindblom, Bj{\"o}rn},
@@ -624,6 +670,26 @@
   volume = {9},
   number = {2-3},
   pages = {1--5}
+}
+
+@article{lubowicz2011,
+  title={Chain shifts},
+  author={{\L}ubowicz, Anna},
+  journal={The Blackwell companion to phonology},
+  pages={1--19},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{maclagan-hay2007,
+  title={Getting fed up with our feet: Contrast maintenance and the New Zealand English “short” front vowel shift},
+  author={Maclagan, Margaret and Hay, Jennifer},
+  journal={Language variation and change},
+  volume={19},
+  number={1},
+  pages={1--25},
+  year={2007},
+  publisher={Cambridge University Press}
 }
 
 @article{martinet1952,
@@ -827,6 +893,17 @@
   isbn = {9789624423419}
 }
 
+@article{schwartz1997,
+  title={Major trends in vowel system inventories},
+  author={Schwartz, Jean-Luc and Bo{\"e}, Louis-Jean and Vall{\'e}e, Nathalie and Abry, Christian},
+  journal={Journal of phonetics},
+  volume={25},
+  number={3},
+  pages={233--253},
+  year={1997},
+  publisher={Elsevier}
+}
+
 @article{seyfarth2016,
   title={Dynamic hyperarticulation of coda voicing contrasts},
   author={Seyfarth, Scott and Buz, Esteban and Jaeger, T Florian},
@@ -1014,6 +1091,15 @@ year = {2018}
   pages={86--116},
   year={2018},
   publisher={Elsevier}
+}
+
+@article{wright2004,
+  title={Factors of lexical competition in vowel articulation},
+  author={Wright, Richard and Local, John and Ogden, Richard and Temple, Rosalind},
+  journal={Papers in laboratory phonology VI},
+  pages={75--87},
+  year={2004},
+  publisher={Cambridge University Press Cambridge, UK}
 }
 
 @article{xie-jaeger2020,
