clean up bibfiles

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -257,6 +257,17 @@
   address = {{Cambridge}}
 }
 
+@article{engstrand2000,
+  title = {{Hur udda \"ar Viby-i? Experimentella och typologiska observationer} {[How peculiar is Viby-i? Experimental and typological observations]}},
+  author = {Engstrand, Olle and Bj{\"o}rsten, Sven and Lindblom, Bj{\"o}rn and Bruce, G{\"o}sta and Eriksson, Anders},
+  year = {2000},
+  journal = {Folkm\aa lsstudier},
+  volume = {39},
+  pages = {83--95},
+  langid = {swedish},
+  file = {/Users/anpe7128/Zotero/storage/M7297776/Engstrand m. fl. - Hur udda är Viby-i Experimentella och typologiska.pdf}
+}
+
 @book{engstrand2004,
   author = {Engstrand, Olle},
   title = {Fonetikens grunder {[The basics of phonetics]}},
@@ -265,17 +276,6 @@
   year = {2004},
   ISBN = {9144042388},
   keywords = {Fonetik},
-}
-
-@article{engstrand2000,
-  title = {{Hur udda \"ar Viby-i? Experimentella och typologiska observationer} {[How peculiar is Viby-i? Experimental and typoligical observations]}},
-  author = {Engstrand, Olle and Bj{\"o}rsten, Sven and Lindblom, Bj{\"o}rn and Bruce, G{\"o}sta and Eriksson, Anders},
-  year = {2000},
-  journal = {Folkm\aa lsstudier},
-  volume = {39},
-  pages = {83--95},
-  langid = {swedish},
-  file = {/Users/anpe7128/Zotero/storage/M7297776/Engstrand m. fl. - Hur udda är Viby-i Experimentella och typologiska.pdf}
 }
 
 @inproceedings{eriksson2004,
@@ -522,20 +522,6 @@
     eprint = {https://pubs.aip.org/asa/jasa/article-pdf/95/2/1030/12067472/1030\_1\_online.pdf},
 }
 
-@incollection{johnson2005,
-  title = {Speaker Normalization in Speech Perception},
-  booktitle = {The {{Handbook}} of {{Speech Perception}}},
-  author = {Johnson, Keith},
-  editor = {Pisoni, David B. and Remez, Robert E.},
-  year = {2005},
-  month = jan,
-  pages = {363--389},
-  publisher = {{John Wiley \& Sons, Inc.}},
-  abstract = {Summary This chapter contains sections titled: Perceiving Vowels in Isolated Syllables Formant Ratio Theories From Auditory Gestalts to Vocal Tract Actions Vocal Tract Normalization Talkers or Vocal Tractsquest; Talker Normalization},
-  isbn = {9780470757024},
-  keywords = {isolated syllables,phonological identity,speaker normalization,speech perception,vowel perception}
-}
-
 @incollection{johnson-sjerps2021,
   title = {Speaker Normalization in Speech Perception},
   booktitle = {The Handbook of Speech Perception},
@@ -550,6 +536,20 @@
   chapter = {6},
   isbn = {978-1-119-18409-6},
   keywords = {acoustic voice properties,extrinsic normalization,intrinsic normalization,speech perception,talker normalization,talker-independent linguistic representations,vowel-normalization methods}
+}
+
+@incollection{johnson2005,
+  title = {Speaker Normalization in Speech Perception},
+  booktitle = {The {{Handbook}} of {{Speech Perception}}},
+  author = {Johnson, Keith},
+  editor = {Pisoni, David B. and Remez, Robert E.},
+  year = {2005},
+  month = jan,
+  pages = {363--389},
+  publisher = {{John Wiley \& Sons, Inc.}},
+  abstract = {Summary This chapter contains sections titled: Perceiving Vowels in Isolated Syllables Formant Ratio Theories From Auditory Gestalts to Vocal Tract Actions Vocal Tract Normalization Talkers or Vocal Tractsquest; Talker Normalization},
+  isbn = {9780470757024},
+  keywords = {isolated syllables,phonological identity,speaker normalization,speech perception,vowel perception}
 }
 
 @article{joos1948,
@@ -593,13 +593,6 @@
   keywords = {Finland,Finnish language,Pronunciation,Swedish language,Vowels}
 }
 
-@book{labov-boberg2005,
-  title = {The atlas of North American English: Phonetics, phonology, and sound change},
-  author = {Labov, William and Ash, Sharon and Boberg, Charles},
-  year = {2005},
-  publisher = {{De Gruyter Mouton}},
-}
-
 @book{labov2001,
   title = {Principles of Linguistic Change. 2: {{Social}} Factors},
   shorttitle = {Principles of Linguistic Change. 2},
@@ -611,6 +604,13 @@
   address = {{Oxford}},
   isbn = {9780631179160},
   langid = {english}
+}
+
+@book{labov-boberg2005,
+  title = {The atlas of North American English: Phonetics, phonology, and sound change},
+  author = {Labov, William and Ash, Sharon and Boberg, Charles},
+  year = {2005},
+  publisher = {{De Gruyter Mouton}},
 }
 
 @article{Ladefoged1957,
@@ -660,16 +660,6 @@
   publisher = {Uppsala University},
   note={Lic.avh. Uppsala : Univ.},
   address = {Uppsala}
-}
-
-@article{lindblom1968,
-  title = {Temporal Organization of Syllable Production},
-  author = {Lindblom, Bj{\"o}rn},
-  year = {1968},
-  journal = {STL-QPSR},
-  volume = {9},
-  number = {2-3},
-  pages = {1--5}
 }
 
 @article{lubowicz2011,
@@ -818,6 +808,24 @@
   urldate = {2022-11-08},
   file = {/Users/anpe7128/Zotero/storage/LP5L4BJH/Peterson - 1961 - Parameters of Vowel Quality.pdf}
 }
+
+@Manual{r-core,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2023},
+  url = {https://www.R-project.org/},
+  }
+
+@Manual{r-studio,
+  title = {RStudio: Integrated Development Environment for R},
+  author = {{RStudio Team}},
+  organization = {RStudio, PBC.},
+  address = {Boston, MA},
+  year = {2020},
+  url = {http://www.rstudio.com/},
+  }
 
 @article{renwick-stanley2020,
   title = {Modeling dynamic trajectories of front vowels in the American South},
@@ -1102,6 +1110,14 @@ year = {2018}
   publisher={Cambridge University Press Cambridge, UK}
 }
 
+@Manual{xie2023,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Xie, Yihui},
+  year = {2023},
+  note = {R package version 1.45},
+  url = {https://yihui.org/knitr/},
+}
+
 @article{xie-jaeger2020,
   title = {Comparing Non-Native and Native Speech: {{Are L2}} Productions More Variable?},
   author = {Xie, Xin and Jaeger, T Florian},
@@ -1113,19 +1129,6 @@ year = {2018}
   pages = {3322--3347},
   issn = {0001-4966},
   doi = {10.1121/10.0001141}
-}
-
-@article{xie2023,
-  title = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception: {{A}} Computational Review},
-  shorttitle = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception},
-  author = {Xie, Xin and Jaeger, T Florian and Kurumada, Chigusa},
-  year = {2023},
-  journal = {Cortex},
-  pages = {377-424},
-  publisher = {{Open Science Framework}},
-  urldate = {2023-05-17},
-  abstract = {This project adopts computational approaches to explore mechanisms underlying exposure-driven changes of speech perception.},
-  collaborator = {Open Science Framework}
 }
 
 @article{young2021,
